# cs348-2022-spring-hw4-Rvvse-master

./: .gitignore  Makefile  README.md
.github/workflows/: main.yml
src/: CFG.ml  analyzer.ml  constraint.ml  dune  frontend.ml  main.ml
test/: dune  example1.c  example1.expected  example2.c  example2.expected  example3.c  example3.expected  homework.h
